New: Implement transactions feature
