# openapi.json
@@ -1814,6 +1814,9 @@
                             "null"
                         ],
                         "format": "date-time"
+                    },
+                    "category": {
+                        "$ref": "#\/components\/schemas\/CategoryResource"
                     }
                 },
                 "required": [
@@ -1823,7 +1826,8 @@
                     "date",
                     "value",
                     "created_at",
-                    "updated_at"
+                    "updated_at",
+                    "category"
                 ],
                 "title": "TransactionResource"
             },
