# src/api/models/transaction-resource.ts
@@ -1,7 +1,9 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
+import { CategoryResource } from '../models/category-resource';
 export interface TransactionResource {
+  category: CategoryResource;
   created_at: (string | null);
   date: string;
   description: (string | null);
